--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,9 @@
         "allowSyntheticDefaultImports": true,
         "esModuleInterop": true,
         "lib": ["es2015", "es2016", "es2017", "dom"],
-        "resolveJsonModule": true
+        "resolveJsonModule": true,
+        "noEmit": true,
+        "skipLibCheck": true
     },
     "exclude": ["node_modules"]
 }
